# mobilehealthcare

./: CMakeLists.txt  Doxyfile  README  mobilehealthcare.kdev4  test1.conf  test2.conf
scripts/: add_doxygen.sh  generate_report.sh  generate_report_golden.sh  make_data.py  make_more_data.py  test1  test2  test3  test4  test5
src/: CMakeLists.txt  Client.cpp  Client.hpp  DataImporter.cpp  DataImporter.hpp  Debug.cpp  Debug.hpp  Error.cpp  Error.hpp  Init.cpp  Init.hpp  Meta.cpp  Meta.hpp  Nurse.cpp  Nurse.hpp  Request.cpp  Request.hpp  Route.cpp  Route.hpp  Solution.cpp  Solution.hpp  Useful.cpp  Useful.hpp  Vertex.cpp  Vertex.hpp  main.cpp
src/DataImporters/: FDataImporter.cpp  FDataImporter.hpp  GoldenDataImporter.cpp  GoldenDataImporter.hpp  MyDataImporter.cpp  MyDataImporter.hpp  RealWorldDataImporter.cpp  RealWorldDataImporter.hpp
src/DataStructures/: DistanceMatrix.cpp  DistanceMatrix.hpp  Requestcache.cpp  Requestcache.hpp
src/DeletionOperators/: ClientDelete.cpp  ClientDelete.hpp  Delete.cpp  Delete.hpp  DistanceDelete.cpp  DistanceDelete.hpp  RandomClientDelete.cpp  RandomClientDelete.hpp
src/Init/: FInit.cpp  FInit.hpp  GreedyInit.cpp  GreedyInit.hpp  RandomInit.cpp  RandomInit.hpp  RegretInit.cpp  RegretInit.hpp  TestInit.cpp  TestInit.hpp
src/Output/: Plot.cpp  Plot.hpp  Statistics.cpp  Statistics.hpp
